--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -1,21 +1,15 @@
 .hero {
   text-align: center;
-}
-.title__h1--header {
-  font-family: "Encode Sans";
-  color: $color-principal;
-  font-size: 1.3125em;
-  font-weight: 600;
-  line-height: 1.29;
-  letter-spacing: 0.63px;
-  margin-bottom: 1.25em;
-}
-.title__h2 {
-  font-size: 1.625rem;
-  font-weight: bold;
-  line-height: 1.5;
-  letter-spacing: 0.78px;
-  text-align: center;
-  color: $gray-dark;
-  text-transform: uppercase;
+  padding-bottom: 2em;
+  &__img {
+    height: 320px;
+    background-image: url(../../img/me.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 320px;
+    margin-top: -32px;
+  }
+  button {
+    margin-top: -114px;
+  }
 }
