arreglando imagen mal vinculada

--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -3,7 +3,7 @@
   padding-bottom: 2em;
   &__img {
     height: 320px;
-    background-image: url(../../img/me.png);
+    background-image: url(../img/me.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 320px;
