arreglando imagen mal vinculada 2

--- a/scss/layout/_dicen.scss
+++ b/scss/layout/_dicen.scss
@@ -2,8 +2,7 @@
   top: 717px;
   width: 100vw;
   height: 1080px;
-  background: transparent url("../../img/bg_dicen.png") 0% 0% no-repeat
-    padding-box;
+  background: transparent url("../img/bg_dicen.png") 0% 0% no-repeat padding-box;
   border-radius: 120px;
   .title__h2 {
     margin: 120px 0;
