avance agregando link rrss

--- a/scss/layout/_dicen.scss
+++ b/scss/layout/_dicen.scss
@@ -4,10 +4,8 @@
   height: 1080px;
   background: transparent url("../img/bg_dicen.png") 0% 0% no-repeat padding-box;
   border-radius: 120px;
+  margin-top: -300px;
   .title__h2 {
     margin: 120px 0;
   }
-}
-.wrapper__cards {
-  padding: 30px 0;
 }
