--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -43,6 +43,17 @@
   box-shadow: 2px 4px 8px 1px $gray-light;
   text-decoration: none;
 }
+@mixin bg-card($width, $height, $margin, $border-radius) {
+  width: $width;
+  height: $height;
+  margin: $margin;
+  border-radius: $border-radius;
+  -webkit-backdrop-filter: blur(15px);
+  backdrop-filter: blur(15px);
+  box-shadow: 15px 15px 50px 0 #0000000d;
+  border: solid 1px #ffffff33;
+  background-image: linear-gradient(117deg, #ffffff29 -2%, #ffffff0d 103%);
+}
 /*
 width: 182px;
   height: 20px;
