--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -1,17 +1,9 @@
 .card {
-  width: 320px;
-  height: 162px;
-  margin: 52px 0;
-  border-radius: 16px;
-  -webkit-backdrop-filter: blur(15px);
-  backdrop-filter: blur(15px);
-  box-shadow: 15px 15px 50px 0 #0000000d;
-  border: solid 1px #ffffff33;
-  background-image: linear-gradient(117deg, #ffffff29 -2%, #ffffff0d 103%);
+  @include bg-card(320px, 172px, 52px auto, 16px);
   z-index: 5;
   &__avatar {
     position: absolute;
-    left: 28px;
+    left: 20px;
     margin-top: -40px;
   }
   .title__h4 {
@@ -22,7 +14,9 @@
   }
   &__copy {
     margin: 12px 16px 16px;
-    font-size: 0.75rem;
+    font-family: $alternative-font;
+    font-size: 0.875rem;
+    font-style: italic;
     font-weight: normal;
     line-height: 1.5;
     letter-spacing: 0.36px;
