--- a/scss/components/_rrss.scss
+++ b/scss/components/_rrss.scss
@@ -1,9 +1,8 @@
 .rrss {
-  border: 2px solid red;
   position: sticky;
   display: inline-block;
-  left: 10px;
-  top: 250px;
+  left: 5%;
+  top: 40%;
   z-index: 6;
   &__bt {
     @include bg-card(32px, 32px, 0 0 13px, 24px);
