--- a/scss/layout/_dicen.scss
+++ b/scss/layout/_dicen.scss
@@ -1,8 +1,8 @@
-#dicen {
+#recomendaciones {
   width: 100%;
   height: 100%;
   background: cover;
-  background-image: url("../../img/background1.jpg");
+  background-image: url("../img/background1.jpg");
   margin-top: -300px;
   .title__h2 {
     margin: 120px 0;
@@ -10,7 +10,7 @@
   .slider {
     width: 360px;
     margin: auto;
-    padding: 0px;
+    padding: 200px 0;
     overflow: hidden;
     &__card {
       margin: auto;
