--- a/scss/layout/_dicen.scss
+++ b/scss/layout/_dicen.scss
@@ -43,7 +43,7 @@
   }
 }
 @media only screen and (min-width: $screen_medium) {
-  #dicen {
+  #recomendaciones {
     .slider {
       width: 720px;
     }
@@ -76,7 +76,7 @@
   }
 }
 @media only screen and (min-width: $screen_xlarge) {
-  #dicen {
+  #recomendaciones {
     .slider {
       width: 1080px;
       margin: 0 auto;
