--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   height: 56px;
-  padding: 0 8px;
+  padding: 0 $wrapper-space;
   -webkit-backdrop-filter: blur(15px);
   backdrop-filter: blur(15px);
   box-shadow: 15px 15px 50px 0 #0000000d;
@@ -23,6 +23,9 @@
     margin: 0;
   }
   &__logo {
-    padding: 10px 12px;
+    padding: 10px 10px 12px 0;
+  }
+  &__menu {
+    margin-right: -12px;
   }
 }
