--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -2,19 +2,30 @@
   @include bg-card(320px, 172px, 52px 20px 20px, 16px);
   z-index: 5;
   min-width: 320px;
+  display: grid;
+  grid-template-columns: 1.3fr 2fr;
+  grid-template-rows: 2fr 1fr 1fr 3fr;
+
   &__avatar {
-    position: absolute;
+    position: relative;
     left: 20px;
     margin-top: -40px;
+    height: 90px;
+    width: 90px;
+    grid-column: 1/2;
   }
   .title__h4 {
-    margin: 16px 16px 4px 120px;
+    margin: 16px 16px 4px 0px;
+    grid-column: 2/3;
+    grid-row: 1/2;
   }
   .title__h5 {
-    margin: 0 16px 4px 120px;
+    margin: 0 16px 4px 0px;
+    grid-column: 2/3;
+    grid-row: 2/3;
   }
   &__copy {
-    margin: 12px 16px 16px;
+    margin: 4px 16px 8px 16px;
     font-family: $alternative-font;
     font-size: 0.875rem;
     font-style: italic;
@@ -22,5 +33,7 @@
     line-height: 1.5;
     letter-spacing: 0.36px;
     text-align: center;
+    grid-column: 1/3;
+    grid-row: 3/4;
   }
 }
