--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -12,7 +12,7 @@
   height: 48px;
   justify-content: space-between;
   min-width: 240px;
-  padding: 14px 16px 14px 16px;
+  padding: 0px 16px;
   text-decoration: none;
   transition: all 0.2s linear;
   &:hover {
@@ -28,7 +28,7 @@
   line-height: 1.5;
   letter-spacing: 1.25px;
   text-align: left;
-  margin: 0 0 0 16px;
+  margin: 0;
   text-transform: uppercase;
 }
 @mixin button-icon($color, $fontsize) {
