--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -15,7 +15,7 @@
   &__copy {
     z-index: 2;
   }
-  a {
+  &__button {
     margin-top: -40px;
     width: 240px;
     justify-self: center;
@@ -44,7 +44,7 @@
       grid-row: 2/3;
       text-align: left;
     }
-    a {
+    &__button {
       grid-column: 1/2;
       grid-row: 3/4;
       justify-self: left;
