--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -23,9 +23,9 @@ $font-size-base: 16px !default;
 $font-size-h1: 3.2rem;
 $font-size-h2: 3rem;
 $font-size-h3: 1.75rem;
-$font-size-h4: 1.125;
+$font-size-h4: 1.125rem;
 $font-size-h5: 1rem;
-$font-size-h6: 0.875;
+$font-size-h6: 0.875rem;
 $font-size-par2: $font-size-h5;
 $font-size-button: 1rem;
 
