--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -31,18 +31,26 @@ body {
   font-stretch: normal;
   font-style: normal;
   &__h2 {
-    font-size: 1.875rem;
-    font-weight: 300;
+    font-size: $font-size-h2;
+    font-weight: $font-weight-h2;
     line-height: 1.5;
     letter-spacing: 0.78px;
-    text-align: center;
-    text-transform: uppercase;
-    margin: 32px 0;
+  }
+  &__h3 {
+    font-size: $font-size-h3;
+    font-weight: $font-weight-h3;
+    line-height: 1.3;
+    letter-spacing: 0.68px;
+  }
+  &__h4 {
+    font-size: $font-size-h4;
+    font-weight: $font-weight-h4;
+    line-height: 1.2;
+    letter-spacing: 0.63px;
   }
   &__h5 {
     font-size: $font-size-h5;
     font-weight: $font-weight-h5;
-
     line-height: 1.56;
     letter-spacing: 0.48px;
     text-align: left;
