--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -74,3 +74,14 @@
   border: solid 1px #ffffff33;
   background-image: linear-gradient(117deg, #ffffff29 -2%, #ffffff0d 103%);
 }
+@mixin colapsables($background-color, $color, $border, $font-size) {
+  background-color: $background-color;
+  color: $color;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: $border;
+  text-align: left;
+  outline: none;
+  font-size: $font-size;
+}
