--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -35,6 +35,7 @@ body {
     font-weight: $font-weight-h2;
     line-height: 1.5;
     letter-spacing: 0.78px;
+    text-transform: uppercase;
   }
   &__h3 {
     font-size: $font-size-h3;
