--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -79,7 +79,7 @@
   background-color: $background-color;
   color: $color;
   cursor: pointer;
-  padding: 18px;
+  padding: 1.2em;
   width: 100%;
   border: $border;
   text-align: left;
