--- a/scss/layout/_recomendaciones.scss
+++ b/scss/layout/_recomendaciones.scss
@@ -3,6 +3,9 @@
   height: 100%;
   background: cover;
   background-image: url("../img/background1.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   margin-top: -400px;
   .title__h2 {
     margin: 120px 0;
