--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -7,8 +7,7 @@
 .button-line {
   @include button-line(3px solid $color-dark, 4px, $color-dark);
   &:hover {
-    @include button-line-hover(3px solid $gray-light, $color-dark);
-    background-color: white;
-    opacity: 0.5;
+    @include button-line-hover(3px solid $color-dark, $color-dark);
+    background-color: rgba(255, 255, 255, 0.1);
   }
 }
