--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -2,18 +2,26 @@
   text-align: center;
   padding-bottom: 2em;
   &__wrapper {
+    padding-top: 5%;
+    margin-bottom: 10%;
     min-width: 288px;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 2.5fr 3fr 1fr;
+    .title__h2 {
+      word-wrap: break-word;
+      font-size: 2.3rem;
+    }
   }
   &__img {
-    height: 320px;
-    background-size: 320px;
-    margin-top: -50px;
+    width: 100%;
+    min-height: 340px;
+    background-image: url(../img/me.png);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
   }
   &__copy {
     z-index: 2;
+    word-wrap: break-word;
+    font-size: 1.2rem;
   }
   &__button {
     margin-top: -40px;
@@ -25,24 +33,59 @@
 @media only screen and (min-width: $screen_medium) {
   .hero {
     &__wrapper {
+      display: grid;
       grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 2fr 1fr;
-      padding-top: 100px;
+      grid-template-rows: 0.3fr 2.5fr 0.2fr;
+      padding-top: 10%;
     }
     &__img {
       grid-column: 2/3;
-      grid-row: 1/4;
-      margin-top: 50px;
+      grid-row: 2/4;
+      max-height: 100%;
     }
     .title__h2 {
-      grid-column: 1/2;
+      grid-column: 1/3;
       grid-row: 1/2;
       text-align: left;
+      margin: 0;
+      font-size: $font-size-h2;
     }
     &__copy {
       grid-column: 1/2;
       grid-row: 2/3;
       text-align: left;
+    }
+    &__button {
+      grid-column: 1/2;
+      grid-row: 3/4;
+      justify-self: left;
+    }
+  }
+}
+@media only screen and (min-width: $screen_large) {
+  .hero {
+    &__wrapper {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 0.5fr 2fr 0.5fr;
+      padding-top: 10%;
+    }
+    &__img {
+      grid-column: 2/3;
+      grid-row: 1/4;
+      max-height: 100%;
+    }
+    .title__h2 {
+      grid-column: 1/2;
+      grid-row: 1/2;
+      text-align: left;
+      font-size: $font-size-h2;
+    }
+    &__copy {
+      grid-column: 1/2;
+      grid-row: 2/3;
+      text-align: left;
+      padding-bottom: 2em;
     }
     &__button {
       grid-column: 1/2;
