--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,8 +1,10 @@
 /*Screen sizes*/
+$screen_xsmall: "360px";
 $screen_small: "576px";
 $screen_medium: "768px";
 $screen_large: "992px";
 $screen_xlarge: "1200px";
+$screen_xxlarge: "1920px";
 
 $mobile: "only screen and (max-width: #{$screen_small - 1})";
 $mobile_landscape: "only screen and (min-width: #{$screen_small}) and (orientation : landscape)";
@@ -13,6 +15,7 @@ $tablet_landscape: "only screen and (min-width: #{$screen_medium}) and (orientat
 $tablet_max: "only screen and (max-width: #{$screen_large - 1})";
 $normal: "only screen and (min-width: #{$screen_large})";
 $desktop: "only screen and (min-width: #{$screen_xlarge})";
+$fullhd: "only screen and (min-width: #{$screen_xxlarge})";
 
 /* Fonts */
 $main-font: "Poppins", "Roboto", sans-serif !default;
