--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -6,6 +6,9 @@ footer {
   right: 0;
   bottom: 0;
   width: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
   p {
     text-align: center;
     color: $color-principal;
