--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -15,7 +15,7 @@
     width: 100%;
     min-width: 256;
     min-height: 340px;
-    background-image: url(../img/me.png);
+    background-image: url(../img/me.jpg);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -69,29 +69,29 @@
     &__wrapper {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      grid-template-rows: 0.5fr 2fr 0.5fr;
+      grid-template-rows: 1fr 0.5fr 2fr 0.5fr 1fr;
       padding-top: 10%;
     }
     &__img {
       grid-column: 2/3;
-      grid-row: 1/4;
+      grid-row: 1/6;
       max-height: 100%;
     }
     .title__h2 {
       grid-column: 1/2;
-      grid-row: 1/2;
+      grid-row: 2/3;
       text-align: left;
       font-size: $font-size-h2;
     }
     &__copy {
       grid-column: 1/2;
-      grid-row: 2/3;
+      grid-row: 3/4;
       text-align: left;
       padding-bottom: 2em;
     }
     &__button {
       grid-column: 1/2;
-      grid-row: 3/4;
+      grid-row: 4/5;
       justify-self: left;
     }
   }
